# osgswg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build-aux/: user_project.vcxproj.in
build-aux/cmake/: GroupSourcesByFilesystem.cmake
osgswg/: CMakeLists.txt  reader_writer_mgn.cc  reader_writer_sht.cc  swg_repository.cpp  swg_repository.h
swgOSG/: CMakeLists.txt  swgOSG.cpp  swgRepository.cpp  swgRepository.hpp
tools/: CMakeLists.txt
tools/swgOSG/: swgOSG.cpp  swgRepository.cpp  swgRepository.hpp
